fix loop jump bug

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -14,6 +14,8 @@
   padding-left: 1.5em;
   padding-right: .5em;
   line-height: 64px;
+  width: 200px;
+  float: left;
   a {
     color: #fff;
     font-size: 18px;
